[workspace]
members = ["primitives", "script", "program"]
resolver = "2"

[workspace.dependencies]
# sp1-blobstream
sp1-blobstream-primitives = { path = "primitives" }

alloy = { version = "0.9", default-features = false }
tendermint = { version = "0.40.3", default-features = false }
tendermint-light-client-verifier = { version = "0.40.3", default-features = false, features = [
    "rust-crypto",
] }

reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "^1.38.0", features = ["full"] }
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_cbor = "0.11.2"
dotenv = "0.15.0"
subtle-encoding = "0.5.1"
anyhow = "1.0.82"
clap = { version = "4.0", features = ["derive", "env"] }
hex = "0.4.3"
futures = "0.3.30"
serde_json = "1"
chrono = "0.4.38"
csv = "1.3.1"
sha2 = "0.10"

# sp1
sp1-sdk = "4.1.7"
sp1-zkvm = "4.1.7"

[patch.crates-io]
sha2-v0-9-9 = { git = "https://github.com/sp1-patches/RustCrypto-hashes", package = "sha2", tag = "patch-sha2-0.9.9-sp1-4.0.0" }
sha2-v0-10-8 = { git = "https://github.com/sp1-patches/RustCrypto-hashes", package = "sha2", tag = "patch-sha2-0.10.8-sp1-4.0.0" }
curve25519-dalek-ng = { git = "https://github.com/sp1-patches/curve25519-dalek-ng", tag = "patch-4.1.1-sp1-4.0.0" }
