[package]
name = "primitives"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy = { version = "0.1.1", default-features = false, features = [
    "sol-types",
] }
tendermint = { version = "0.35.0", default-features = false }
tendermint-light-client-verifier = { version = "0.35.0", default-features = false, features = [
    "rust-crypto",
] }
serde = { version = "1.0", default-features = false, features = ["derive"] }
