[package]
name = "sp1-blobstream-primitives"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy = { workspace = true, default-features = false, features = ["sol-types"] }
tendermint = { workspace = true, default-features = false }
tendermint-light-client-verifier = { workspace = true, default-features = false, features = ["rust-crypto"] }
serde = { workspace = true, default-features = false, features = ["derive"] }
