[package]
version = "0.1.0"
name = "blobstream-program"
edition = "2021"

[dependencies]
primitives = { path = "../primitives" }
sp1-zkvm = "4.0.0-rc.8"
tendermint-light-client-verifier = { version = "0.35.0", default-features = false, features = [
    "rust-crypto",
] }
tendermint = "0.35.0"
sha2 = "0.10"
serde_cbor = "0.11.2"
alloy = { workspace = true, features = ["sol-types"] }
