[package]
version = "0.1.0"
name = "sp1-blobstream-program"
edition = "2021"

[dependencies]
sp1-blobstream-primitives = { workspace = true }
sp1-zkvm = { workspace = true }
tendermint-light-client-verifier = { workspace = true, default-features = false, features = ["rust-crypto"] }
tendermint = { workspace = true, default-features = false }
sha2 = { workspace = true }
serde_cbor = { workspace = true }
alloy = { workspace = true, default-features = false, features = ["sol-types"] }
