[package]
version = "0.1.0"
name = "blobstream-script"
edition = "2021"

[[bin]]
name = "test"
path = "bin/test.rs"

[[bin]]
name = "genesis"
path = "bin/genesis.rs"

[[bin]]
name = "operator"
path = "bin/operator.rs"

[[bin]]
name = "vkey"
path = "bin/vkey.rs"

[dependencies]
primitives = { path = "../primitives" }
sp1-sdk = "3.0.0"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "^1.38.0", features = ["full"] }
serde = { version = "1.0", default-features = false, features = ["derive"] }
tendermint = { version = "0.35.0", default-features = false }
tendermint-light-client-verifier = { version = "0.35.0", default-features = false, features = [
    "rust-crypto",
] }
alloy = { version = "0.1.1", features = ["full"] }
serde_cbor = "0.11.2"
dotenv = "0.15.0"
subtle-encoding = "0.5.1"
anyhow = "1.0.82"
clap = { version = "4.0", features = ["derive", "env"] }
log = "0.4.21"
hex = "0.4.3"
futures = "0.3.30"
env_logger = "0.11.3"
serde_json = "1"
[build-dependencies]
sp1-build = "3.0.0"
