[package]
version = "0.1.0"
name = "sp1-blobstream-script"
edition = "2021"

[[bin]]
name = "test"
path = "bin/test.rs"

[[bin]]
name = "genesis"
path = "bin/genesis.rs"

[[bin]]
name = "operator"
path = "bin/operator.rs"

[[bin]]
name = "vkey"
path = "bin/vkey.rs"

[[bin]]
name = "costs"
path = "bin/costs.rs"

[dependencies]
sp1-blobstream-primitives = { workspace = true }
alloy = { workspace = true, default-features = true, features = ["full"] }
tendermint = { workspace = true }
tendermint-light-client-verifier = { workspace = true, features = [
    "rust-crypto",
] }
sp1-sdk = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_cbor = { workspace = true }
dotenv = { workspace = true }
subtle-encoding = { workspace = true }
anyhow.workspace = true
clap = { workspace = true }
hex = { workspace = true }
futures = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
csv = { workspace = true }
async-trait = "0.1.86"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"

[build-dependencies]
sp1-build = "4.1.7"
